--- a/producer/Laptop_MSI.html
+++ b/producer/Laptop_MSI.html
@@ -238,10 +238,10 @@
 									</label>
 								</div>
 								<div class="input-checkbox">
-									<input type="checkbox"  id="brand-3">
+									<input type="checkbox" checked="" id="brand-3">
 									<label for="brand-3">
 										<span></span>
-										<a href="../producer/Laptop_MSI.html" checked="" target="blank">MSI</a>
+										<a href="../producer/Laptop_MSI.html"  target="blank">MSI</a>
 										<small>(10)</small>
 									</label>
 								</div>
@@ -521,7 +521,8 @@
 							<div class="clearfix visible-sm visible-xs"></div>
 							<!-- product -->
 							<div class="col-md-4 col-xs-6">
-								<div class="product">
+								<a href="../detail/msi/msi_GV72.html" target="blank">
+									<div class="product">
 									<div class="product-img">
 										<img src="https://phongvu.vn/media/catalog/product/cache/23/image/380x/9df78eab33525d08d6e5fb8d27136e95/uploads/product/po_38320_18820/2017/12/18/38320_1513561863-1.jpg" alt="">
 									</div>
@@ -540,6 +541,7 @@
 										<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
 									</div>
 								</div>
+								</a>
 							</div>
 							<!-- /product -->
 
